[tool.poetry]
name = "dicom_fastapi"
version = "0.1.0"
description = ""
authors = ["amirhosein <amirhosein.roodgar1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.34.0"
fastapi = "^0.115.11"
python-multipart = "^0.0.20"
SQLAlchemy = "^2.0.38"
pydicom = "^3.0.1"
alembic = "^1.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
